# mcp-rosreestr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
